--- a/index.html
+++ b/index.html
@@ -9,14 +9,85 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-
+          <img src="Resources/Images/img-tea-cozy-logo.png" alt="Tea Cozy Logo" height="50px">
         </div>
         <nav>
           <span><a href="#">Mission</a></span>
-          <span><a href="#">Mission</a></span>
-          <span><a href="#">Mission</a></span>
+          <span><a href="#">Featured Tea</a></span>
+          <span><a href="#">Location</a></span>
         </nav>
     </header>
-    
+
+    <!-- Main image -->
+    <div class="hero">
+      <div class="mission">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+
+    <!-- Tea of the month section -->
+    <div class="month">
+      <h2>Tea of the Month</h2>
+      <span>What's Steeping at The Tea Cozy?</span>
+      <div class="teas">
+        <div class="tea" id="berryblitz">
+          <span class="tea-name">Fall Berry Blitz Tea</span>
+        </div>
+        <div class="tea" id="spicedrum">
+          <span class="tea-name">Spiced Rum Tea</span>
+        </div>
+        <div class="tea" id="donuts">
+          <span class="tea-name">Seasonal Donuts</span>
+        </div>
+        <div class="tea" id="myrtle">
+          <span class="tea-name">Myrtle Ave Tea</span>
+        </div>
+        <div class="tea" id="bedford">
+          <span class="tea-name">Bedford Bizarre Tea</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Locations section -->
+    <div class="locations">
+      <h2>Locations</h2>
+      <div class="loction">
+        <h3>Downtown</h3>
+        <p>
+          384 West 4th St<br>
+          Suite 108<br>
+          Portland, Maine
+        </p>
+      </div>
+      <div class="loction">
+        <h3>East Bayside</h3>
+        <p>
+          3433 Phisherman's Avenue<br>
+          (Northwest Corner)<br>
+          Portland, Maine
+        </p>
+      </div>
+      <div class="loction">
+        <h3>Downtown</h3>
+        <p>
+          515 Crescent Avenue<br>
+          Second Floor<br>
+          Portland, Maine
+        </p>
+      </div>
+    </div>
+
+    <!-- Footer and Contact info -->
+    <footer>
+      <div class="Contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <div class="copyright">
+          <span>copyright The Tea Cozy 2017</span>
+      </div>
+    </footer>
   </body>
 </html>
