Header issues resolved. Ready for submission.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-          <img src="Resources/Images/img-tea-cozy-logo.png" alt="Tea Cozy Logo" height="50px">
+          <img src="Resources/Images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
         </div>
         <nav>
           <span><a href="#statement">Mission</a></span>
@@ -19,21 +19,21 @@
     </header>
     <main>
       <!-- Main image -->
-      <div class="hero" id="statement">
+      <div class="hero flex" id="statement">
         <div class="mission">
           <h2>Our Mission</h2>
           <h4>
-            Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
-            Fair Trade, Organic Tea
+            Handpicked, Artisanally Curated, Free Range, Sustainable,
+            Small Batch, Fair Trade, Organic Tea
           </h4>
         </div>
       </div>
 
       <!-- Tea of the month section -->
-      <div class="month" id="specials">
+      <div class="month flex" id="specials">
         <h2>Tea of the Month</h2>
-        <span>What's Steeping at The Tea Cozy?</span>
-        <div class="teas">
+        <h3>What's Steeping at The Tea Cozy?</h3>
+        <div class="teas flex">
           <div class="tea" id="berryblitz">
             <span class="tea-name">Fall Berry Blitz Tea</span>
           </div>
@@ -53,21 +53,21 @@
       </div>
 
       <!-- Locations section -->
-      <div class="locations" id="shops">
+      <div class="locations flex" id="shops">
         <h2>Locations</h2>
-        <div class="location">
+        <div class="location flex">
           <h3>Downtown</h3>
           <p>384 West 4th St</p>
           <p>Suite 108</p>
           <p>Portland, Maine</p>
         </div>
-        <div class="location">
+        <div class="location flex">
           <h3>East Bayside</h3>
           <p>3433 Phisherman's Avenue</p>
           <p>(Northwest Corner)</p>
           <p>Portland, Maine</p>
         </div>
-        <div class="location">
+        <div class="location flex">
           <h3>Downtown</h3>
           <p>515 Crescent Avenue</p>
           <p>Second Floor</p>
@@ -85,8 +85,7 @@
 
     <!-- Footer -->
     <footer>
-      <span>copyright The Tea Cozy 2017</span>
+      <h5>copyright The Tea Cozy 2017</h5>
     </footer>
-
   </body>
 </html>
